testing G1 GC