@@ -19,11 +19,23 @@
         <!--switch the args0 code for debug-->
         <run.jvm.args0>-Xverify:none</run.jvm.args0>
         <!--<run.jvm.args0>-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005</run.jvm.args0>-->
-        <run.jvm.args1>-server -XX:NewSize=256m -XX:MaxNewSize=256m -XX:+ExplicitGCInvokesConcurrent -XX:+UnlockDiagnosticVMOptions -XX:ParGCCardsPerStrideChunk=2048</run.jvm.args1>
-        <run.jvm.args2>-XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSScavengeBeforeRemark -XX:+CMSConcurrentMTEnabled</run.jvm.args2>
+        <!--run.jvm.args1>-server -XX:NewSize=256m -XX:MaxNewSize=256m -XX:+ExplicitGCInvokesConcurrent -XX:+UnlockDiagnosticVMOptions -XX:ParGCCardsPerStrideChunk=2048</run.jvm.args1-->
+        <run.jvm.args1>-server -XX:G1ReservePercent=10 -XX:InitiatingHeapOccupancyPercent=50 -XX:MaxGCPauseMillis=200 -XX:+ExplicitGCInvokesConcurrent</run.jvm.args1>
+
+        <!--run.jvm.args2>-XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSScavengeBeforeRemark -XX:+CMSConcurrentMTEnabled</run.jvm.args2-->
+        <run.jvm.args2>-XX:+UseG1GC -XX:+UnlockCommercialFeatures -XX:+UseCompressedClassPointers -XX:+UseCompressedOops -XX:-OmitStackTraceInFastThrow</run.jvm.args2>
+
         <!-- -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 -->
         <!-- -XX:GCLogFileSize=50M -XX:NumberOfGCLogFiles=10 -XX:+UseGCLogFileRotation -->
         <run.jvm.args3>-XX:+PrintGC -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+HeapDumpOnOutOfMemoryError -Xloggc:./logs/gc/gc.log</run.jvm.args3>
+
+<!-- Gravity GC settings:
+-XX:+UseG1GC -XX:G1ReservePercent=10 -XX:InitialHeapSize=12884901888 -XX:InitiatingHeapOccupancyPercent=50 -XX:MaxGCPauseMillis=200 -XX:MaxHeapSize=12884901888 -XX:G1HeapRegionSize=32m"
+-XX:ConcGCThreads=3 -XX:ParallelGCThreads=12 
+-XX:+UnlockCommercialFeatures -XX:+UseCompressedClassPointers -XX:+UseCompressedOops -XX:-OmitStackTraceInFastThrow
+-XX:+PrintGC -XX:+PrintGCDateStamps -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+HeapDumpOnOutOfMemoryError 
+-XX:+FlightRecorder 
+-->
         <profile>first</profile>
         <log.level>info</log.level>
         <node.instance>0</node.instance>
